--- a/wp-content/themes/apartvilla/style.css
+++ b/wp-content/themes/apartvilla/style.css
@@ -1343,7 +1343,7 @@ footer p {
   color: #E8A20C;
 }
 #top-bar .call-back .fa {
-  background: #E8A20C;
+  background: #999;
   color: #2A2A2A;
   width: 25px;
   height: 25px;
